# applied-ai-rig

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  init.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  module_proposal.yml  pilot_feedback.yml
.github/workflows/: ci.yml  release.yml  security.yml
applied_ai_rig/: __init__.py  checker.py  cli.py  installer.py  intake.py  manifest.py  records.py  web_setup.py
applied_ai_rig/web/: index.html
designs/local-web-wizard/: MIGRATION.md  TODO.md  design-a-calm-guidance.html  design-a1-quiet-minimal.html  design-a1a-inline-explanations.html  design-a1b-context-inspector.html  design-a1c-progressive-detail.html  design-a2-calm-structured.html  design-a3-warm-guidance.html  design-b-engineering-cockpit.html  design-c-visual-cards.html
docs/: ci.md  coexistence.md  integrations.md  modules.md  pilot-playbook.md  registers.md  releasing.md  spec.md  v2-spec.md  verification.md  versioning.md
examples/: README.md
requirements/: release.txt
schemas/: manifest.schema.json  profile.schema.json
tasks/: plan.md  todo.md  v2-plan.md
tests/: test_checker.py  test_ci_packaging.py  test_cli.py  test_examples.py  test_installer.py  test_intake.py  test_manifest.py  test_modules.py  test_pilot_program.py  test_project_surface.py  test_records.py  test_release_automation.py  test_web_setup.py
tools/: verify_package.py
(+61 files in other folders)
