[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "applied-ai-rig"
description = "A lightweight, modular engineering record for applied-AI projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Baptiste Blouin" }]
keywords = ["applied-ai", "engineering-record", "decision-records", "evidence"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "packaging"]

[project.urls]
Homepage = "https://github.com/BaptisteBlouin/applied-ai-rig"
Repository = "https://github.com/BaptisteBlouin/applied-ai-rig"
Changelog = "https://github.com/BaptisteBlouin/applied-ai-rig/blob/main/CHANGELOG.md"
Issues = "https://github.com/BaptisteBlouin/applied-ai-rig/issues"

[project.scripts]
applied-ai-rig = "applied_ai_rig.cli:main"

[tool.setuptools]
packages = ["applied_ai_rig"]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "applied_ai_rig.__version__" }

[tool.setuptools.package-data]
applied_ai_rig = [
    "templates/*",
    "templates/*/*",
    "templates/*/*/*",
    "web/*.html",
]

[tool.ruff]
target-version = "py310"
# The default lint selection (E4/E7/E9 + F) is kept. E501 is deliberately not
# enabled: the codebase relies on long, descriptive single lines.

[tool.mypy]
python_version = "3.10"
strict = true
files = ["applied_ai_rig", "init.py", "tools"]
